# Interview-AI-Grader

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
artifacts/ai-interviewer/: index.html  package.json  requirements.yaml  vite.config.ts
artifacts/ai-interviewer/.replit-artifact/: artifact.toml
artifacts/ai-interviewer/src/: App.tsx  index.css
artifacts/ai-interviewer/src/components/: BadgesPanel.tsx  ErrorBoundary.tsx  Layout.tsx  ThemeProvider.tsx
artifacts/ai-interviewer/src/lib/: utils.ts
artifacts/ai-interviewer/src/pages/: ActiveInterview.tsx  CandidateDashboard.tsx  CreateJob.tsx  EditScheduledInterview.tsx  EmployerDashboard.tsx  InterviewAccess.tsx  InterviewReport.tsx  InterviewSetup.tsx  Landing.tsx  Profile.tsx  ScheduleInterview.tsx  ScheduledInterviewCandidates.tsx  ScheduledInterviewResults.tsx  not-found.tsx
artifacts/api-server/: package.json
artifacts/api-server-py/: main.py  requirements.txt
artifacts/api-server-py/db/: __init__.py  database.py  models.py
artifacts/api-server-py/lib/: ai.py  auth.py
artifacts/api-server-py/routes/: auth.py  interviews.py  jobs.py  profile.py  scheduled_interviews.py
artifacts/api-server/src/: app.ts
artifacts/interview-coach/: index.html  package.json
artifacts/interview-coach/.replit-artifact/: artifact.toml
artifacts/interview-coach/src/: App.tsx
attached_assets/: Pasted--EXISTING-SYSTEM-CONTEXT-App-has-2-entry-roles-Student-_1776602698500.txt
lib/api-spec/: openapi.yaml
lib/integrations-openai-ai-server/src/: client.ts
(+17 files in other folders)
