[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.14.0",
    "authlib==1.3.2",
    "cryptography==44.0.0",
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "itsdangerous==2.2.0",
    "openai==1.59.6",
    "openpyxl==3.1.5",
    "pdfplumber==0.11.4",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-docx==1.1.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "requests==2.32.3",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.1",
]
